# cargo-workspace-lints

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tests/: README.md  test.rs
tests/failing-workspace/: Cargo.toml
tests/passing-workspace/test-crate/: Cargo.toml
